--- a/README
+++ b/README
@@ -1,61 +1,89 @@
-Robot Mobile Charging Station Mini Program
+---
 
-A WeChat Mini Program for monitoring and controlling mobile robot charging stations, built with uni-app (Vue3) and uniCloud (Alibaba Cloud).
-This project is designed to support mock development → cloud-based simulation → real robot integration with minimal changes to frontend logic.
+# 🤖 Robot Mobile Charging Station Mini Program
 
-🚀 Tech Stack
+A **WeChat Mini Program** for monitoring and controlling **mobile robot charging stations**, built with **uni-app (Vue 3)** and **uniCloud (Alibaba Cloud)**.
 
-Frontend: uni-app + Vue 3 (<script setup>)
+The project adopts a **frontend–backend decoupled, device-agnostic architecture**, enabling seamless evolution from **UI mock development** to **cloud-based simulation** and ultimately **real robot integration**, without major frontend changes.
 
-Cloud Backend: uniCloud (Alibaba Cloud)
+---
 
-Database: uniCloud Cloud Database
+## 🚀 Tech Stack
 
-Platform: WeChat Mini Program
+* **Frontend**: uni-app + Vue 3 (`<script setup>`)
+* **Cloud Backend**: uniCloud (Alibaba Cloud)
+* **Database**: uniCloud Cloud Database
+* **Platform**: WeChat Mini Program
 
-Architecture Goal: Frontend–Backend decoupled, device-agnostic integration
+---
 
-📁 Project Structure (Simplified)
+## 🧩 Architecture Overview
+
+This project follows a **layered architecture**:
+
+```text
+Frontend (Mini Program)
+  ├─ UI Pages (Robot List / Detail / Control)
+  ├─ Service Layer (API abstraction)
+  ↓
+Cloud Backend (uniCloud)
+  ├─ Cloud Functions (business APIs)
+  ├─ Cloud Database (robot state & commands)
+  ↓
+Device Layer (Future)
+  ├─ Real robots via HTTP / MQTT
+```
+
+* **Frontend** focuses on UI and interaction only
+* **Backend** provides unified data and command APIs
+* **Device layer** can be replaced or extended without affecting the Mini Program
+
+---
+
+## 📁 Project Structure (Simplified)
+
+```text
 ├─ pages/
-│  ├─ index/                # Entry page (redirect / bootstrap)
+│  ├─ index/                # Entry page
 │  ├─ robots/
 │  │  ├─ index.vue          # Robot list
 │  │  └─ detail.vue         # Robot detail & control
 │
-├─ services/                # API / service abstraction (Phase 4)
-├─ utils/                   # Utils (formatting, mock, helpers)
+├─ services/                # API / service abstraction
+├─ utils/                   # Utilities (formatting, helpers)
 ├─ types/                   # Type definitions
 ├─ styles/                  # Global styles (optional)
 │
 ├─ uniCloud-aliyun/
-│  ├─ database/             # Database schemas & JQL
-│  └─ cloudfunctions/       # Cloud functions (Phase 3)
+│  ├─ database/             # Database schemas
+│  └─ cloudfunctions/       # Backend APIs
 │
 ├─ pages.json
 ├─ manifest.json
 └─ README.md
+```
 
-✅ Current Status
-Phase 2 Completed: Database Setup & Deployment ✅
+---
 
-The database layer has been fully initialized and deployed to uniCloud (Alibaba Cloud).
+## 🗄️ Data Model (Overview)
 
-What has been completed:
+The system uses a cloud-based data model to simulate and support real robot operations:
 
-✅ Cloud database collections created
+* `robots` — robot base information
+* `telemetry_latest` — latest robot status (battery, position, online)
+* `faults` — fault and error records
+* `commands` — control command records
 
-✅ Database schemas defined and deployed
+This design supports **real-time monitoring and auditable control workflows**, even before physical robots are available.
 
-✅ Initial test data inserted
+---
 
-✅ Queries verified successfully in uniCloud console
+## 🎯 Design Goals
 
-Current collections:
+* Frontend–backend decoupling
+* Hardware-independent Mini Program
+* Clear separation between UI, business logic, and device access
+* Smooth transition from simulation to real robot integration
 
-Collection Name	Purpose
-robots	Robot base information (robotCode, model, status)
-telemetry_latest	Latest telemetry per robot (battery, position, online)
-faults	Fault and error records
-commands	Control command records (move / stop / goto)
+---
 
-This database structure simulates real robot telemetry and command flow, even before physical devices are available.
